<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.cowwoc.cat</groupId>
	<artifactId>cat-client</artifactId>
	<version>2.1</version>
	<packaging>jar</packaging>

	<name>CAT client</name>
	<description>Client-side implementation of the CAT plugin</description>

	<properties>
		<maven.version>3.9.12</maven.version>
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jackson.version>3.1.0-rc1</jackson.version>
		<testng.version>7.12.0</testng.version>
		<requirements.version>13.2</requirements.version>
		<pouch.version>10.3</pouch.version>
		<checkstyle.version>13.2.0</checkstyle.version>
		<pmd.version>7.21.0</pmd.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>tools.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.29</version>
		</dependency>
		<dependency>
			<groupId>io.github.cowwoc.requirements</groupId>
			<artifactId>requirements-java</artifactId>
			<version>${requirements.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.cowwoc.requirements</groupId>
			<artifactId>requirements-jackson</artifactId>
			<version>${requirements.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.cowwoc.pouch</groupId>
			<artifactId>pouch-core</artifactId>
			<version>${pouch.version}</version>
		</dependency>
		<dependency>
			<groupId>com.knuddels</groupId>
			<artifactId>jtokkit</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>io.github.java-diff-utils</groupId>
			<artifactId>java-diff-utils</artifactId>
			<version>4.16</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven.version}</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.21.0</version>
				<configuration>
					<ruleSet>
						<rules>
							<rule>
								<groupId>org.apache.maven.plugins</groupId>
								<ignoreVersions>
									<ignoreVersion>
										<type>regex</type>
										<version>.+(-|\.)(alpha|beta).+|.+-rc(-|\.).*</version>
									</ignoreVersion>
								</ignoreVersions>
							</rule>
							<rule>
								<ignoreVersions>
									<ignoreVersion>
										<type>regex</type>
										<version>(?i)(.+-snapshot|.+(-|\.)M\d|.+(-|\.)(alpha|beta).+)|.+-rc(-|\.|\d).*</version>
									</ignoreVersion>
								</ignoreVersions>
							</rule>
						</rules>
					</ruleSet>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>25</release>
					<failOnWarning>true</failOnWarning>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArgs>
						<arg>-Xlint:all,-exports,-requires-automatic,-module</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<!-- Force UTF-8 encoding for forked test JVM -->
					<argLine>-Dstdin.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8</argLine>
					<environmentVariables>
						<CLAUDE_PLUGIN_ROOT>${project.basedir}/../plugin</CLAUDE_PLUGIN_ROOT>
					</environmentVariables>
					<parallel>methods</parallel>
					<properties>
						<property>
							<!-- WORKAROUND: https://github.com/cbeust/testng/issues/2727 -->
							<name>usedefaultlisteners</name>
							<key>false</key>
						</property>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>build-jlink-image</id>
						<phase>verify</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${project.basedir}/build-jlink.sh</executable>
							<workingDirectory>${project.basedir}</workingDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.6.0</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>${checkstyle.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<phase>process-test-classes</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>config/checkstyle.xml</configLocation>
					<consoleOutput>true</consoleOutput>
					<failOnViolation>true</failOnViolation>
					<linkXRef>false</linkXRef>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
					<excludeGeneratedSources>true</excludeGeneratedSources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.28.0</version>
				<dependencies>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-core</artifactId>
						<version>${pmd.version}</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-java</artifactId>
						<version>${pmd.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<includeTests>true</includeTests>
					<rulesets>
						<ruleset>config/pmd.xml</ruleset>
						<ruleset>config/pmd-main.xml</ruleset>
					</rulesets>
					<printFailingErrors>true</printFailingErrors>
					<analysisCache>true</analysisCache>
					<linkXRef>false</linkXRef>
					<targetJdk>${maven.compiler.release}</targetJdk>
				</configuration>
				<executions>
					<execution>
						<phase>process-test-classes</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
